--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,18 +117,15 @@ section {
     font-size: 55px;
     color: #fce138;
 }
-.intro {
-    text-align: center;
-}
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .steps div {
@@ -153,10 +150,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color: #fce138;
@@ -181,13 +179,16 @@ section {
     width: 65%
 }
 .trainers {
-    text-align: center;
+
 }
 .text-left {
     text-align: left;
 }
 .text-right {
     text-align: right; 
+}
+.flex-row {
+    display: flex;
 }
 .trainer-bio h3 {
     font-size: 32px;
@@ -205,7 +206,6 @@ section {
 
 /*reach out styling starts here*/
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
