--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -69,6 +69,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 .hero-form {
     background-color: #fce138;
@@ -110,7 +111,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .her-cta h2 {
     font-style: italic;
@@ -169,7 +170,7 @@ section {
     max-width: 100%;
 }
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -276,4 +277,24 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+}
+/* media query for smaller desktop screens and smaller */
+@media screen and (max-width: 980px) {
+    header h1 a {
+        color: tomato;
+    }
+}
+
+/*media query for tablets and smaller */
+@media screen and (max-width: 768px) {
+    header h1 {
+        font-size: 80px;
+    }
+}
+
+/*media query for mobile phones and smaller */
+@media screen and (max-width: 575px) {
+    header h1 {
+        font-size: 100px;
+    }
 }
