--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,17 @@ section {
     }
 }
 
+.service-grid-container {
+    display: grid;
+}
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
 /*media query for mobile phones and smaller */
 @media screen and (max-width: 575px) {
     .hero-form button {
