--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,12 @@
     box-sizing: border-box;
 }
 body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
 }
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -56,7 +56,7 @@ header nav ul li a {
 }
 header nav ul li a:hover {
     background: var(--primary-color);
-    color: #024e76;
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
@@ -69,7 +69,7 @@ footer {
     flex-wrap: wrap;
 }
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -78,7 +78,7 @@ footer div {
     text-align: right;
 }
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 section {
     padding: 60px;
@@ -97,8 +97,8 @@ section {
 .hero-form {
     background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
-    color: #024e76;
-    border: solid 3px #024e76;
+    color: var(--secondary-color);
+    border: solid 3px var(--secondary-color);
     border-radius: 15px;
     width: 40%;
     margin: 3.5%;
@@ -112,12 +112,12 @@ section {
     margin: 5px 0 15px 0;
 }
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     border-radius: 15px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     background-color: rgba(255,255,255, 0.75);
@@ -131,14 +131,14 @@ section {
 }
 .hero-form button {
     color: var(--primary-color);
-    background-color: #024e76;
+    background-color: var(--secondary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 15px;
 }
 .hero-form-button:hover {
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 .checkbox-wrapper input, .radio-wrapper input {
     opacity: 0;
@@ -154,7 +154,7 @@ section {
     height: 20px;
     width: 20px;
     background: rgba(255,255,255, 0.75);
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     position: absolute;
     top: -4px;
     left: -30px;
@@ -167,18 +167,18 @@ section {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #024e76;
+    background: var(--secondary-color);
     position: absolute;
     left: -29px;
     top: -3px;
-    background-image: radial-gradient(circle, #39a6b2, #024e76);
+    background-image: radial-gradient(circle, #39a6b2, var(--secondary-color));
 }
 .checkbox-wrapper label::after {
     content: "";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
@@ -207,7 +207,7 @@ section {
 }
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -229,7 +229,7 @@ section {
     background: var(--primary-color);
 }
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
@@ -239,10 +239,10 @@ section {
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 .step-info {
@@ -260,7 +260,7 @@ section {
 }
 .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -271,11 +271,11 @@ section {
     border-color: var(--primary-color);
 }
 .secondary-border { 
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 }
 .trainer {
     margin: 20px;
-    background: #024e76;
+    background: var(--secondary-color);
     color: var(--primary-color);
     flex: 1
 }
@@ -315,7 +315,7 @@ section {
 }
 /*reach out styling starts here*/
 .contact {
-    background: #024e76;
+    background: var(--secondary-color);
 }
 .contact h2 {
     color: var(--primary-color);
@@ -349,12 +349,12 @@ section {
     color: var(--primary-color);
 }
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     border-radius: 15px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -369,14 +369,14 @@ section {
     border: none;
     border-radius: 15px;
     background: var(--primary-color);
-    color: #024e76;
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
 }
 .contact-form button:hover {
     color: var(--primary-color);
-    background: #39a6b2;
+    background: var(--tertiary-color);
 }
 
 /* service plan grid starts here */
@@ -394,13 +394,13 @@ section {
     display: grid;
     grid-template-columns: 1fr repeat(2, 4fr);
     grid-template-rows: repeat(5, 1fr) 2fr;
-    border: 2px solid #024e76;
-    color: #024e76;
+    border: 2px solid var(--secondary-color);
+    color: var(--secondary-color);
     font-size: 1.2rem;
 }
 .service-grid-item {
     padding: 15px 0;
-    border: 2px solid #024e76;
+    border: 2px solid var(--secondary-color);
     display: flex;
     align-items: center;
     justify-content: center;
