--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,6 @@ section {
 .checkbox-wrapper input:checked + label::after, .radio-wrapper input:checked + label::after {
     content: "";
 }
-
 .hero-cta {
     width: 35%;
     text-align: right;
@@ -205,6 +204,7 @@ section {
     color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
 .intro p {
     line-height: 1.7;
     color: var(--tertiary-color);
@@ -279,8 +279,47 @@ section {
     color: var(--primary-color);
     flex: 1
 }
-.trainer img {
-    width: 100%
+.trainer-img {
+    width: 100%;
+    min-height: 300px;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+    overflow: hidden;
+}
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(252, 225, 56, 0.3), rgba(2, 78, 118, 1));;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 0.5s;
+}
+.trainer:hover .trainer-img::after {
+    opacity: 1;
+}
+.trainer-img h3 {
+    position: relative;
+    z-index: 9998;
+    font-size: 28px;
+    margin-bottom: 5px;
+    top: 200px;
+    transition: 0.6s;
+}
+.trainer-img h4 {
+    position: relative;
+    z-index: 9998;
+    font-size: 22px;
+    top: 200px;
+    transition: 0.6s;
+    transition-delay: 150ms;
+}
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+    top: 0px;
 }
 .trainer-bio {
     padding: 25px;
@@ -304,15 +343,33 @@ section {
 }
 .trainer-bio h3 {
     font-size: 28px;
+    display: none;
 }
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
-    margin-bottom: 15px
+    margin-bottom: 15px;
+    display: none;
 }
 .trainer-bio p {
     font-size: 17px; 
 }
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+    background-size: cover;
+    background-position: 80%;
+}
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+    background-size: cover;
+    background-position: 80%;
+}
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+    background-size: cover;
+    background-position: 80%;
+}
+
 /*reach out styling starts here*/
 .contact {
     background: var(--secondary-color);
@@ -500,6 +557,21 @@ section {
         writing-mode: unset;
         grid-column: 1 / -1;
         grid-row: -1;
+    }
+    .trainer-img h3 {
+        display: none;
+    }
+    .trainer-img h4 {
+        display: none;
+    }
+    .trainer-img::after {
+        display: none;
+    }
+    .trainer-bio h3 {
+        display: block;
+    }
+    .trainer-bio h4 {
+        display: block;
     }
 }
 
